<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <TextView
        android:id="@+id/student_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_category"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textColor="#000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <RadioGroup
        android:id="@+id/student_category_rg"
        android:layout_margin="16dp"
        android:layout_below="@id/student_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/placed_rb"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placed_student"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/not_placed_rb"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_placed"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true" />
</RelativeLayout>