<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificFeedbackActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_branch">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/branch_specific_feedback"
                android:layout_margin="8dp"
                android:paddingTop="4dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/branch"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/branch_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_view_branch"
        android:id="@+id/edit_text_card_view"
        android:layout_margin="4dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:id="@+id/important_subjects_et"
            android:hint="@string/enter_name_of_important_subjects"/>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignBottom="@id/edit_text_card_view"
        android:layout_alignRight="@id/edit_text_card_view"
        android:src="@drawable/ic_baseline_done_24px"/>
</RelativeLayout>